Chnaged Images address

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -49,13 +49,13 @@
             <h1 class="text-center font-bold text-5xl max-lg:text-3xl">Our Mission</h1>
             <h2 class="text-center font-semibold text-3xl py-4 max-lg:text-2xl">Spreading Awareness, Saving Lives</h2>
             <p class="text-2xl text-center max-lg:text-xl">At OncoSmart, our mission is to empower individuals with the knowledge and tools they need to recognize early warning signs of cancer. By providing accurate information, self-assessment resources, and a supportive community, we strive to make early detection accessible to all, ultimately saving lives and improving health outcomes.</p>
-            <img src="{{ url_for('static', filename='images/medical1.png') }}"alt="medical" class="text-center w-1/4 mx-auto py-9 max-md:w-3/5">
+            <img src="{{ url_for('static', filename='images/medical1.jpg') }}"alt="medical" class="text-center w-1/4 mx-auto py-9 max-md:w-3/5">
         </div>
         <div class="w-full scroll1">
             <h1 class="text-center font-bold text-5xl max-lg:text-3xl">Our Vision</h1>
             <h2 class="text-center font-semibold text-3xl py-4 max-lg:text-2xl">A Future Free of Late Cancer Diagnoses</h2>
             <p class="text-2xl text-center max-lg:text-xl">We envision a world where everyone has the awareness and resources to act early, reducing the number of preventable cancer cases. OncoSmart aims to be a global leader in cancer awareness, fostering a society where informed decisions lead to healthier, longer lives.</p>
-            <img src="{{ url_for('static', filename='imagesmedical2.png') }}" alt="medical" class="text-center w-1/4 mx-auto py-9 max-md:w-3/5">
+            <img src="{{ url_for('static', filename='images/medical2.jpg') }}" alt="medical" class="text-center w-1/4 mx-auto py-9 max-md:w-3/5">
         </div>
     </div>
     
@@ -246,6 +246,5 @@
             console.log("close");
         })
     </script>
-    <script src="../header.js"></script>
 </body>
 </html>
